# today

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  release-on-tag-push.yml
doc/: libgit2pp_implement.md
src/: CMakeLists.txt  log.hpp  main.cpp  tui.hpp
src/libgit2pp/: CMakeLists.txt  commit.cpp  commit.hpp  config.cpp  diff.cpp  error.hpp  git_object.cpp  oid.cpp  oid.hpp  repository.cpp  repository.hpp  revwalk.cpp  signature.cpp  signature.hpp  tree.cpp
src/libgit2pp/include/: commit.hpp  config.hpp  diff.hpp  git_object.hpp  oid.hpp  repository.hpp  revwalk.hpp  signature.hpp  tree.hpp
